--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -17,22 +17,19 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link" th:href="@{/matchs}">Matches</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Matches</a>
+						<a class="nav-link" th:href="@{/equipes}">Equipes</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Equipes</a>
+						<a class="nav-link" th:href="@{/joueurs}">Joueurs</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Joueurs</a>
+						<a class="nav-link" th:href="@{/arbitres}">Arbitres</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Arbitres</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Stades</a>
+						<a class="nav-link" th:href="@{/stades}">Stades</a>
 					</li>
 				</ul>
 			</div>
