finish the Team part

--- a/src/main/resources/templates/arbitre.html
+++ b/src/main/resources/templates/arbitre.html
@@ -44,7 +44,7 @@
 								</td>
 								<td>
 									<a onclick="javascript: return confirm('Etes vous sûr(e)')"
-										th:href="@{/delete/{id}(id=${arbitre.id})}" class="btn btn-danger">
+										th:href="@{/arbitre/delete/{id}(id=${arbitre.id})}" class="btn btn-danger">
 										<i class="bi bi-trash"></i>
 									</a>
 								</td>
