--- a/src/main/resources/templates/formArbitre.html
+++ b/src/main/resources/templates/formArbitre.html
@@ -16,7 +16,7 @@
 					<div class="card-header">Nouveau Arbitre</div>
 					<div class="card-body">
 						<div class="p-5">
-							<form th:action="@{/save}" method="post">
+							<form th:action="@{/arbitre/save}" method="post">
 								<div class="mb-2">
 									<label class="form-label">
 										Nom
