--- a/src/main/resources/templates/joueur.html
+++ b/src/main/resources/templates/joueur.html
@@ -16,7 +16,7 @@
 	<div layout:fragment="content">
 		<div class="p-5">
 			<div class="card">
-				<div class="card-header">List Patients</div>
+				<div class="card-header">List Jouers</div>
 				<div class="card-body">
 					<table class="table">
 						<thead>
