--- a/src/main/resources/templates/editEquipe.html
+++ b/src/main/resources/templates/editEquipe.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="/webjars/bootstrap/5.3.0/css/bootstrap.min.css">
-	<title>Arbitre</title>
+	<title>Equipe</title>
 </head>
 
 <body>
@@ -13,29 +13,29 @@
 		<div class="row mt-5">
 			<div class="col-md-6 offset-3">
 				<div class="card">
-					<div class="card-header">Edit Arbitre</div>
+					<div class="card-header">Edit Equipe</div>
 					<div class="card-body">
 						<div class="p-5">
-							<form th:action="@{/arbitre/save}" method="post">
+							<form th:action="@{/equipe/save}" method="post">
 								<div class="mb-2">
 									<label class="form-label">
 										ID :
 									</label>
-									<label class="form-label" th:text="${arbitre.id}"></label>
-									<input type="hidden" name="id" class="form-control" th:value="${arbitre.id}">
+									<label class="form-label" th:text="${equipe.id}"></label>
+									<input type="hidden" name="id" class="form-control" th:value="${equipe.id}">
 								</div>
 								<div class="mb-2">
 									<label class="form-label">
 										Nom
 									</label>
-									<input type="text" name="nom" class="form-control" th:value="${arbitre.nom}">
+									<input type="text" name="nomEquipe" class="form-control" th:value="${equipe.nomEquipe}">
 								</div>
 								<div class="mb-2">
 									<label class="form-label">
 										Nationalite
 									</label>
-									<input type="text" name="nationalite" class="form-control"
-										th:value="${arbitre.nationalite}">
+									<input type="text" name="pays" class="form-control"
+										th:value="${equipe.pays}">
 								</div>
 								<button class="btn btn-success">Update</button>
 							</form>
