design the project

--- a/src/main/resources/templates/equipe.html
+++ b/src/main/resources/templates/equipe.html
@@ -39,7 +39,7 @@
 								<td th:text="${equipe.pays}"></td>
 								<td>
 									<a class="btn btn-secondary" th:href="@{/equipe/edit(id=${equipe.id})}">
-										Edit
+										<i class="bi bi-pencil"></i>
 									</a>
 								</td>
 								<td>
