--- a/src/main/resources/templates/joueur.html
+++ b/src/main/resources/templates/joueur.html
@@ -41,7 +41,7 @@
 								<td th:text="${joueur?.equipe?.nomEquipe}"></td>
 								<td>
 									<a class="btn btn-secondary" th:href="@{/joueur/edit(id=${joueur.id})}">
-										Edit
+										<i class="bi bi-pencil"></i>
 									</a>
 								</td>
 								<td>
