--- a/src/main/resources/templates/match.html
+++ b/src/main/resources/templates/match.html
@@ -48,7 +48,7 @@
 								<td th:text="${match.heureMatch}"></td>
 								<td>
 									<a class="btn btn-secondary" th:href="@{/match/edit(id=${match.id})}">
-										Edit
+										<i class="bi bi-pencil"></i>
 									</a>
 								</td>
 								<td>
