--- a/src/main/resources/templates/stade.html
+++ b/src/main/resources/templates/stade.html
@@ -41,7 +41,7 @@
 								<td th:text="${stade.ville}"></td>
 								<td>
 									<a class="btn btn-secondary" th:href="@{/stade/edit(id=${stade.id})}">
-										Edit
+										<i class="bi bi-pencil"></i>
 									</a>
 								</td>
 								<td>
