--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+	<nav class="navbar navbar-expand-lg bg-primary navbar-dark">
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav mx-auto">
 					<li class="nav-item">
 						<a class="nav-link" th:href="@{/matchs}">Matches</a>
 					</li>
